@@ -1,4 +1,9 @@
+2011-02-22  Tolleiv Nietsch  <typo3@tolleiv.de>
+
+	* Fixed bug #12855: Generate preview link visible in Live-Workspace and on non-content pages
+
 2011-02-21  Marco Bresch <typo3@starfinanz.de>
+
 	* Fixed bug #13074: missing cache_frontend configuration
 
 2011-02-20  Tolleiv Nietsch  <typo3@tolleiv.de>
